# PlaylistFilterForSpotify

./: .gitignore  README.html  README.md
PlaylistFilterForSpotify/: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  vcpkg.json
PlaylistFilterForSpotify/cmake/: FindCRYPTOPP.cmake  FindGLFW3.cmake  FindGLM.cmake  defaultExecutable.cmake  vcpkgTargets.cmake
PlaylistFilterForSpotify/include/cryptopp/: config_os.h
PlaylistFilterForSpotify/include/glad/: glad.h
PlaylistFilterForSpotify/lib/: LICENSES.txt  Readme.txt
PlaylistFilterForSpotify/misc/: TrackResponse.jsonc
PlaylistFilterForSpotify/misc/Fonts/: DejaVu Fonts — License.html
PlaylistFilterForSpotify/src/: CMakeLists.txt
PlaylistFilterForSpotify/src/App/: App.cpp  App.h
PlaylistFilterForSpotify/src/Camera/: Camera.cpp  Camera.h  CameraPreset.h
PlaylistFilterForSpotify/src/CommonStructs/: CommonStructs.h
PlaylistFilterForSpotify/src/DynamicBitset/: DynamicBitset.cpp  DynamicBitset.h
PlaylistFilterForSpotify/src/PlaylistFilter/: CMakeLists.txt  main.cpp
PlaylistFilterForSpotify/src/PlaylistFilter/App/: App.cpp  App.hpp  AppRun.cpp  Input.cpp  Input.hpp
PlaylistFilterForSpotify/src/PlaylistFilter/Camera/: Camera.cpp  Camera.hpp
PlaylistFilterForSpotify/src/PlaylistFilter/CommonStructs/: CommonStructs.hpp
PlaylistFilterForSpotify/src/PlaylistFilter/DynamicBitset/: DynamicBitset.cpp
PlaylistFilterForSpotify/src/PlaylistFilter/Renderer/: Renderer.cpp  Renderer.hpp
PlaylistFilterForSpotify/src/PlaylistFilter/ShaderProgram/: ShaderProgram.cpp  ShaderProgram.hpp
PlaylistFilterForSpotify/src/PlaylistFilter/Spotify/: ApiError.cpp  ApiError.hpp  ApiResponses.cpp  ApiResponses.hpp  ApiResponsesJSON.hpp  SpotifyApiAccess.cpp  SpotifyApiAccess.hpp
PlaylistFilterForSpotify/src/PlaylistFilter/Table/: Table.cpp  Table.hpp  Track.cpp
PlaylistFilterForSpotify/src/PlaylistFilter/Track/: Track.cpp  Track.hpp
PlaylistFilterForSpotify/src/PlaylistFilter/utils/: OpenGLErrorHandler.cpp  OpenGLErrorHandler.hpp  imgui_extensions.cpp  imgui_extensions.hpp  utf.hpp
PlaylistFilterForSpotify/src/Renderer/: Renderer.cpp  Renderer.h
PlaylistFilterForSpotify/src/ShaderProgram/: ShaderProgram.cpp  ShaderProgram.h
PlaylistFilterForSpotify/src/Shaders/CoverGraphing/: coverGraphing.vert
PlaylistFilterForSpotify/src/Spotify/: ApiError.cpp  ApiError.h  SpotifyApiAccess.cpp  SpotifyApiAccess.h  TrackData.cpp  TrackData.h
PlaylistFilterForSpotify/src/Table/: Table.hpp
PlaylistFilterForSpotify/src/Track/: Track.cpp  Track.h
PlaylistFilterForSpotify/src/_Executables/: CMakeLists.txt
PlaylistFilterForSpotify/src/_Executables/RequestTest/: main.cpp
PlaylistFilterForSpotify/src/_Executables/Test/: main.cpp
PlaylistFilterForSpotify/src/_Executables/Visualizer/: main.cpp
PlaylistFilterForSpotify/src/_Executables/Visualizer/Shaders/CoverGraphing/: coverGraphing.frag
PlaylistFilterForSpotify/src/_Executables/Visualizer/Shaders/Line/: line.frag  line.geom
PlaylistFilterForSpotify/src/_Executables/Visualizer/Shaders/MinimalColor/: minimalColor.frag  minimalColor.vert
PlaylistFilterForSpotify/src/_Executables/Visualizer/Shaders/Track/: track.geom
PlaylistFilterForSpotify/src/utils/: OpenGLErrorHandler.cpp  OpenGLErrorHandler.h  imgui_extensions.cpp  imgui_extensions.h  utf.h
