file(GLOB ITEMS ${CMAKE_CURRENT_SOURCE_DIR}/*)
FOREACH(item ${ITEMS})
    if(IS_DIRECTORY ${item})
        if(EXISTS "${item}/CMakeLists.txt")
            file(RELATIVE_PATH relpath ${CMAKE_CURRENT_SOURCE_DIR} ${item})
            message("Executable Folder located: " ${relpath})
            set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/out/debug)
            set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/out/debug)
            set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/out/release)
            set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/out/release)
            add_subdirectory(${relpath})
        ENDIF()
    ENDIF()
ENDFOREACH()
